2007-08-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* log-view.el (log-view-marked-list): Delete variable.
	(log-view-mode): Don't use it.
	(log-view-toggle-mark-entry): Likewise, simplify.
	(log-view-current-tag): Don't return properties.
	(log-view-get-marked): New function.

2007-08-25  Alexandre Julliard  <julliard@winehq.org>

	* vc-git.el (vc-git-mode-line-string): New function.

2007-08-25  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-langs.el (c-other-decl-block-key-in-symbols-alist):
	new language variable.

	* progmodes/cc-engine.el (c-brace-anchor-point): new function.
	(c-add-stmt-syntax): Give accurate anchor points for "namespace",
	"extern" etc., rather than BOI.  Fix addition of spurious
	syntactic-symbol 'defun-block-intro, replacing it with
	'innamespace, etc.

2007-08-25  Juri Linkov  <juri@jurta.org>

	* files.el (auto-mode-alist): Move "\\.x[bp]m\\'" to image-mode.el.

	* image-mode.el: Add autoloads to put associations in auto-mode-alist:
	associate "\\.x[bp]m\\'" with c-mode and image-mode-maybe, and
	"\\.svgz?\\'" with xml-mode and image-mode-maybe.

	* image.el (image-type-header-regexps): Use more complex regexp for svg.
	(image-type-file-name-regexps): Add ("\\.svgz?\\'" . svg).
	(image-type-auto-detectable): Add (svg . maybe).

	* jka-cmpr-hook.el (jka-compr-compression-info-list): Add .svgz
	to treat it like .tgz.

	* calendar/cal-bahai.el: Add file coding cookie.

2007-08-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* pcvs.el (cvs-query-directory): Only prompt when prefix is given.
	Don't behave differently when executed via M-x.  Add doc string.

	* sort.el (sort-fold-case, sort-numeric-base): Mark as
	safe-local-variable.

2007-08-25  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-forms.el (var-TimeZone): Make nil explicitly
	the default value.
	(math-calendar-tzinfo): New variable.
	(math-get-calendar-tzinfo): New function.
	(calcFunc-tzone, calcFunc-dst): Use Emacs's calendar
	to get information when zone is nil.
